# cpplot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre_commit_config.yaml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.txt
cmake/: FindGlog.cmake  FindMKL.cmake  findEigen.cmake  findTBB.cmake
docs/: .gitignore  requirements.txt
docs/source/: about.rst  conf.py  example_chapter.rst  index.rst  installation.rst  license.rst  quick_start.rst  version_history.rst
examples/: test_bar_and_scatter_plot.json  test_bar_plot.json  test_fit_lewkowicz_speed.json  test_layout_no_title_plot.json  test_layout_plot.json  test_scatter_plot.json  test_scatter_with_legend_plot.json  test_surface_plot.json  test_wolfgang.json
source/: CMakeLists.txt  cpplot.cpp  cpplot.h  eigen.h  exceptions.h  figures.cpp  figures.h  hello.cpp  hello.h  layout.h  main.cpp  online.h
source/plot_types/: bar.cpp  bar.h  scatter.cpp  scatter.h  surface.h
test/: CMakeLists.txt  CMakeLists.txt.in
test/unit/: cpplot_test.cpp  figures_test.cpp  main_test.cpp
